; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_dimension_vector.c_ts_dimension_vec_add_slice_sort.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_dimension_vector.c_ts_dimension_vec_add_slice_sort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ts_dimension_vec_add_slice_sort(i32** %0, i32* %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32** %0, i32*** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32**, i32*** %3, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32* @ts_dimension_vec_add_slice(i32** %6, i32* %7)
  store i32* %8, i32** %5, align 8
  %9 = load i32**, i32*** %3, align 8
  store i32* %8, i32** %9, align 8
  %10 = load i32**, i32*** %3, align 8
  %11 = call i32* @ts_dimension_vec_sort(i32** %10)
  ret i32* %11
}

declare dso_local i32* @ts_dimension_vec_add_slice(i32**, i32*) #1

declare dso_local i32* @ts_dimension_vec_sort(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
